--- a/Lighting.html
+++ b/Lighting.html
@@ -1,36 +1,80 @@
-   <!DOCTYPE html>
+<!DOCTYPE html>
 <html data-bs-theme="light" lang="en">
 
 <head>
     <meta charset="utf-8">
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WD7TFGW6');</script>
+<!-- End Google Tag Manager -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Interior & Exterior Lighting - Leonard Electric</title>
+    <title>Hot Tubs, Pools &amp; Sauna</title>
+    <meta name="" content="">
+    <meta name="description" content="Relax and unwind in style with our flawless hot tub installation services">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/ABeeZee.css">
+    <link rel="stylesheet" href="assets/css/Aclonica.css">
+    <link rel="stylesheet" href="assets/css/Alata.css">
+    <link rel="stylesheet" href="assets/css/Alatsi.css">
+    <link rel="stylesheet" href="assets/css/Archivo.css">
+    <link rel="stylesheet" href="assets/css/Averia%20Serif%20Libre.css">
+    <link rel="stylesheet" href="assets/css/Belgrano.css">
+    <link rel="stylesheet" href="assets/css/Cabin.css">
+    <link rel="stylesheet" href="assets/css/Cantora%20One.css">
+    <link rel="stylesheet" href="assets/css/Francois%20One.css">
+    <link rel="stylesheet" href="assets/css/Galindo.css">
+    <link rel="stylesheet" href="assets/css/Hammersmith%20One.css">
+    <link rel="stylesheet" href="assets/css/Hind%20Guntur.css">
+    <link rel="stylesheet" href="assets/css/Hind%20Madurai.css">
+    <link rel="stylesheet" href="assets/css/Hind%20Siliguri.css">
+    <link rel="stylesheet" href="assets/css/IBM%20Plex%20Sans.css">
+    <link rel="stylesheet" href="assets/css/IBM%20Plex%20Serif.css">
+    <link rel="stylesheet" href="assets/css/Inter.css">
+    <link rel="stylesheet" href="assets/css/Inter%20Tight.css">
+    <link rel="stylesheet" href="assets/css/Jomolhari.css">
+    <link rel="stylesheet" href="assets/css/Montserrat%20Alternates.css">
+    <link rel="stylesheet" href="assets/css/Montserrat%20Subrayada.css">
+    <link rel="stylesheet" href="assets/css/Roboto%20Condensed.css">
+    <link rel="stylesheet" href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/Animated-Pretty-Product-List-v12-Animated-Pretty-Product-List.css">
+    <link rel="stylesheet" href="assets/css/dh-card-image-left-dark.css">
+    <link rel="stylesheet" href="assets/css/Hero-Clean-images.css">
+    <link rel="stylesheet" href="assets/css/Hero-Photography-.css">
+    <link rel="stylesheet" href="assets/css/Hero-Technology-.css">
+    <link rel="stylesheet" href="assets/css/Pricing-Duo-badges.css">
+    <link rel="stylesheet" href="assets/css/Pricing-Duo-icons.css">
+    <link rel="stylesheet" href="assets/css/Video-Parallax-Background-v3.css">
+    <link rel="stylesheet" href="assets/css/Video-Responsive.css">
 </head>
 
-<body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand d-flex align-items-center" href="/">
-                <img src="assets/img/3.png" style="width: 140px;height: 122px;">
-            </a>
-            <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navcol-1">
+<body><div><!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WD7TFGW6"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) --></div>
+    <nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark" id="mainNav" style="font-family: Inter, sans-serif;">
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/" style="margin-right: 0px;"><img src="assets/img/3.png" style="width: 140px;height: 122PX;" width="175" height="115"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-1" style="width: 50%;">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="hottubs.html">Hot Tubs</a></li>
-                    <li class="nav-item"><a class="btn btn-primary shadow" href="contacts.html">Contact</a>
+                    <li class="nav-item"><a class="nav-link" href="index.html" style="text-align: center;padding: 8px 8px;">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html" style="text-align: center;padding: 8px 8px;">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="gallery.html" style="text-align: center;padding: 8px 8px;">Gallery</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html" style="text-align: center;padding: 8px 8px;">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="panelupgrade.html" style="text-align: center;padding: 8px 8px;">Panel Upgrades</a></li>
+                    <li class="nav-item"><a class="nav-link" href="electricalrepairs.html" style="text-align: center;padding: 8px 8px;">Electrical Repair</a></li>
+                    <li class="nav-item"><a class="nav-link" href="homeautomation.html" style="text-align: center;padding: 8px 8px;">Home Automation</a></li>
+                    <li class="nav-item"><a class="nav-link" href="ev.html" style="text-align: center;padding: 8px 8px;">EV Charging System</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="hottubs.html" style="text-align: center;padding: 8px 8px;">Hot Tubs &amp; Pools</a></li>
+                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="contacts.html">&nbsp;Contact&nbsp;</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+    <header class="bg-dark"></header>
 
+   
     <!-- Hero Section -->
     <div class="hero bg-light py-5 text-center">
         <h1>Interior & Exterior Lighting Services</h1>
@@ -130,14 +174,75 @@
         </section>
     </main>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-white py-4">
-        <div class="container text-center">
-            <p>&copy; 2024 Leonard Electric. All Rights Reserved.</p>
+                      </div>
+                </div>
+            </div>
         </div>
-    </footer>
+    </div><footer class="bg-dark text-white" style="font-family: Inter, sans-serif; width: 100%; padding: 30px; margin: 20px;">
+    <div class="row g-0 justify-content-center">
+        <!-- Services Section -->
+        <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
+            <h3 class="fs-6 fw-bold">Services</h3>
+            <ul class="list-unstyled">
+                <li><a href="panelupgrade.html" class="text-white">Panel Upgrades</a></li>
+                <li><a href="services.html" class="text-white">Surge Protection</a></li>
+                <li><a href="electricalrepairs.html" class="text-white">Electrical Repair</a></li>
+                <li><a href="homeautomation.html" class="text-white">Home Automation</a></li>
+                <li><a href="ev.html" class="text-white">Car Charger</a></li>
+                <li><a href="hottubs.html" class="text-white">Hot Tubs</a></li>
+                <li><a href="hottubs.html" class="text-white">Pool Installation</a></li>
+                <li><a href="services.html" class="text-white">Home Inspection</a></li>
+                <li><a href="services.html" class="text-white">Panel Labelling</a></li>
+            </ul>
+        </div>
 
+        <!-- About Section -->
+        <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
+            <h3 class="fs-6 fw-bold">About</h3>
+            <ul class="list-unstyled">
+                <li><a href="about.html" class="text-white">Company</a></li>
+                <li><a href="gallery.html" class="text-white">Gallery</a></li>
+                <li><a href="https://esasafe.com" class="text-white">Licensed &amp; Insured</a></li>
+            </ul>
+        </div>
+
+        <!-- Contact Us Section -->
+        <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
+            <h3 class="fs-6 fw-bold">Contact Us</h3>
+            <ul class="list-unstyled">
+                <li><a href="contacts.html" class="text-white">Book an Estimate</a></li>
+            </ul>
+        </div>
+
+        <!-- Brand Section -->
+        <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last">
+            <div class="fw-bold d-flex align-items-center mb-2">
+                <span class="bs-icon-sm bs-icon-circle bs-icon-primary d-flex justify-content-center align-items-center me-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-bezier">
+                        <path fill-rule="evenodd" d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a.5.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5v-1zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1z"></path>
+                        <path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5v-1zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path>
+                    </svg>
+                </span>
+                <a href="index.html" class="text-white"><span>Leonard Electric</span></a>
+            </div>
+            <p class="text-muted" style="font-size: 13px;">Turning Power into Perfection.</p>
+        </div>
+    </div>
+
+    <!-- Footer Bottom Line -->
+    <hr class="border-secondary">
+    <div class="text-muted d-flex justify-content-between align-items-center pt-3">
+        <p class="mb-0">Copyright © 2023 Leonard Electric</p>
+    </div>
+</footer>
+
+            
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/Animated-Pretty-Product-List-v12-Animated-Pretty-Product-List.js"></script>
+    <script src="assets/js/bold-and-dark.js"></script>
+    <script src="assets/js/Video-Parallax-Background-v3-Parallax-Video-Background.js"></script>
 </body>
 
 </html>
+
+  
