--- a/Lighting.html
+++ b/Lighting.html
@@ -87,7 +87,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <section class="py-5">
             <div class="container text-center">
                 <h2>Smart Interior Lighting Solutions</h2>
-                <img src="assets/img/living-room-lighting.jpg" alt="Living Room with Smart Lighting" class="img-fluid my-4 mx-auto">
+                <img src="assets/img/Living_Room_Lighting.jpg" alt="Living Room with Smart Lighting" class="img-fluid my-4 mx-auto">
                 <p>Transform your home with cutting-edge lighting solutions:</p>
                 <ul class="list-unstyled">
                     <li>Lights turn on/off automatically while you’re on vacation.</li>
@@ -106,23 +106,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <p>We specialize in five types of lighting installations:</p>
                 <div class="row gy-4 mt-4">
                     <div class="col-md-4">
-                        <img src="assets/img/kitchen-track-lighting.jpg" alt="Kitchen with Track Lighting" class="img-fluid mx-auto">
+                        <img src="assets/img/kitchen_lighting.jpg" alt="Kitchen with Track Lighting" class="img-fluid mx-auto">
                         <figcaption>Track Lighting</figcaption>
                     </div>
                     <div class="col-md-4">
-                        <img src="assets/img/recessed-ceiling-lights.jpg" alt="Living Room with Recessed Ceiling Lights" class="img-fluid mx-auto">
+                        <img src="assets/img/Living_Room_Lighting.jpg" alt="Living Room with Recessed Ceiling Lights" class="img-fluid mx-auto">
                         <figcaption>Recessed Ceiling Lights</figcaption>
                     </div>
                     <div class="col-md-4">
-                        <img src="assets/img/reading-nook-downlights.jpg" alt="Reading Nook with Downlights" class="img-fluid mx-auto">
+                        <img src="assets/img/cozy_lightinh.jpg" alt="Reading Nook with Downlights" class="img-fluid mx-auto">
                         <figcaption>Downlights</figcaption>
                     </div>
                     <div class="col-md-4">
-                        <img src="assets/img/bedroom-swag-lighting.jpg" alt="Bedroom with Swag Lighting" class="img-fluid mx-auto">
+                        <img src="assets/img/bedroom_lighting.jpg" alt="Bedroom with Swag Lighting" class="img-fluid mx-auto">
                         <figcaption>Swag Lighting</figcaption>
                     </div>
                     <div class="col-md-4">
-                        <img src="assets/img/chandelier-dining.jpg" alt="Dining Room with Chandelier" class="img-fluid mx-auto">
+                        <img src="assets/img/Chandelier_light.jpg" alt="Dining Room with Chandelier" class="img-fluid mx-auto">
                         <figcaption>Chandeliers ($269 Install)</figcaption>
                     </div>
                 </div>
@@ -133,7 +133,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <section class="py-5">
             <div class="container text-center">
                 <h2>Exterior Lighting Services</h2>
-                <img src="assets/img/house-exterior-lighting.jpg" alt="House Exterior with Lighting" class="img-fluid my-4 mx-auto">
+                <img src="assets/img/Exterior_Lighting.jpg" alt="House Exterior with Lighting" class="img-fluid my-4 mx-auto">
                 <p>Enhance safety and beauty with professional exterior lighting:</p>
                 <ul class="list-unstyled">
                     <li>Automated schedules to match seasons and time changes.</li>
@@ -149,7 +149,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <section class="py-5 bg-light">
             <div class="container text-center">
                 <h2>Holiday & Seasonal Lighting Installation</h2>
-                <img src="assets/img/holiday-lights.jpg" alt="Festive Home with Christmas Lights" class="img-fluid my-4 mx-auto">
+                <img src="assets/img/Xma_lighting.jpg" alt="Festive Home with Christmas Lights" class="img-fluid my-4 mx-auto">
                 <p>Make your holidays magical and stress-free with professionally installed holiday lighting:</p>
                 <ul class="list-unstyled">
                     <li>Custom designs for a festive look.</li>
