--- a/Lighting.html
+++ b/Lighting.html
@@ -84,7 +84,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- Main Content -->
     <main>
         <!-- Smart Interior Lighting -->
-        <section class="py-5">style="background-color: #f8f9fa;">           
+        <section class="py-5" style="background-color: #f8f9fa;">           
             <div class="container text-center">
                 <h2>Smart Interior Lighting Solutions</h2>
                 <img src="assets/img/Living_Room_Lighting.jpg" alt="Living Room with Smart Lighting" class="img-fluid my-4 mx-auto">
