--- a/Lighting.html
+++ b/Lighting.html
@@ -84,7 +84,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- Main Content -->
     <main>
         <!-- Smart Interior Lighting -->
-        <section class="py-5" style="background-color: #f8f9fa;">           
+        <section class="py-5" style="background-color: #2d2d2d;">           
             <div class="container text-center">
                 <h2>Smart Interior Lighting Solutions</h2>
                 <img src="assets/img/Living_Room_Lighting.jpg" alt="Living Room with Smart Lighting" class="img-fluid my-4 mx-auto">
@@ -100,7 +100,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </section>
 
         <!-- Professional Interior Lighting Installations -->
-        <section class="py-5 bg-light">
+        <section class="py-5 bg-light"> style="background-color: #2d2d2d;">
             <div class="container text-center">
                 <h2>Professional Interior Lighting Installations</h2>
                 <p>We specialize in five types of lighting installations:</p>
@@ -130,7 +130,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </section>
 
         <!-- Exterior Lighting -->
-        <section class="py-5">
+        <section class="py-5"> style="background-color: #2d2d2d;">
             <div class="container text-center">
                 <h2>Exterior Lighting Services</h2>
                 <img src="assets/img/Exterior_Lighting.jpg" alt="House Exterior with Lighting" class="img-fluid my-4 mx-auto">
@@ -146,7 +146,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </section>
 
         <!-- Holiday Lighting -->
-        <section class="py-5 bg-light">
+        <section class="py-5 bg-light"> style="background-color: #2d2d2d;">
             <div class="container text-center">
                 <h2>Holiday & Seasonal Lighting Installation</h2>
                 <img src="assets/img/Xma_lighting.jpg" alt="Festive Home with Christmas Lights" class="img-fluid my-4 mx-auto">
