change link for homeautomation.html

--- a/services.html
+++ b/services.html
@@ -112,7 +112,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="col-12" style="padding: 0px;">
                             <p class="product-description" style="text-align: left;margin-bottom: 20px;">We specialize in professional electrical installations, offering cutting-edge solutions like entire home automation systems to enhance your living spaces with modern technology.&nbsp; &nbsp;</p>
                             <div class="row" style="margin: 0px;">
-                                <div class="col-6" style="height: auto;padding: 0px;padding-top: 0px;padding-left: 14px;margin-top: 10px;"><a href="electricalrepairs.html"><button class="btn btn-light" type="button" style="padding: 0px;min-height: 35px;width: 102.0781px;padding-top: 0px;">Learn More</button></a></div>
+                                <div class="col-6" style="height: auto;padding: 0px;padding-top: 0px;padding-left: 14px;margin-top: 10px;"><a href="homeautomation.html"><button class="btn btn-light" type="button" style="padding: 0px;min-height: 35px;width: 102.0781px;padding-top: 0px;">Learn More</button></a></div>
                             </div>
                         </div>
                     </div>
