--- a/Lighting.html
+++ b/Lighting.html
@@ -100,29 +100,29 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </section>
 
         <!-- Professional Interior Lighting Installations -->
-        <section class="py-5 bg-light"> style="background-color: #2d2d2d;">
+        <section class="py-5 bg-light" style="background-color: #2d2d2d;">
             <div class="container text-center">
                 <h2>Professional Interior Lighting Installations</h2>
                 <p>We specialize in five types of lighting installations:</p>
                 <div class="row gy-4 mt-4">
                     <div class="col-md-4">
-                        <img src="assets/img/kitchen_lighting.jpg" alt="Kitchen with Track Lighting" class="img-fluid mx-auto">
+                        <img src="assets/img/kitchen_lighting" alt="Kitchen with Track Lighting" class="img-fluid mx-auto">
                         <figcaption>Track Lighting</figcaption>
                     </div>
                     <div class="col-md-4">
-                        <img src="assets/img/Living_Room_Lighting.jpg" alt="Living Room with Recessed Ceiling Lights" class="img-fluid mx-auto">
+                        <img src="assets/img/Living_Room_Lighting" alt="Living Room with Recessed Ceiling Lights" class="img-fluid mx-auto">
                         <figcaption>Recessed Ceiling Lights</figcaption>
                     </div>
                     <div class="col-md-4">
-                        <img src="assets/img/cozy_lightinh.jpg" alt="Reading Nook with Downlights" class="img-fluid mx-auto">
+                        <img src="assets/img/cozy_lighting" alt="Reading Nook with Downlights" class="img-fluid mx-auto">
                         <figcaption>Downlights</figcaption>
                     </div>
                     <div class="col-md-4">
-                        <img src="assets/img/bedroom_lighting.jpg" alt="Bedroom with Swag Lighting" class="img-fluid mx-auto">
+                        <img src="assets/img/bedroom_lighting" alt="Bedroom with Swag Lighting" class="img-fluid mx-auto">
                         <figcaption>Swag Lighting</figcaption>
                     </div>
                     <div class="col-md-4">
-                        <img src="assets/img/Chandelier_light.jpg" alt="Dining Room with Chandelier" class="img-fluid mx-auto">
+                        <img src="assets/img/Chandelier_light" alt="Dining Room with Chandelier" class="img-fluid mx-auto">
                         <figcaption>Chandeliers ($269 Install)</figcaption>
                     </div>
                 </div>
@@ -130,10 +130,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </section>
 
         <!-- Exterior Lighting -->
-        <section class="py-5"> style="background-color: #2d2d2d;">
+        <section class="py-5" style="background-color: #2d2d2d;">
             <div class="container text-center">
                 <h2>Exterior Lighting Services</h2>
-                <img src="assets/img/Exterior_Lighting.jpg" alt="House Exterior with Lighting" class="img-fluid my-4 mx-auto">
+                <img src="assets/img/Exterior_Lighting" alt="House Exterior with Lighting" class="img-fluid my-4 mx-auto">
                 <p>Enhance safety and beauty with professional exterior lighting:</p>
                 <ul class="list-unstyled">
                     <li>Automated schedules to match seasons and time changes.</li>
@@ -146,10 +146,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </section>
 
         <!-- Holiday Lighting -->
-        <section class="py-5 bg-light"> style="background-color: #2d2d2d;">
+        <section class="py-5 bg-light" style="background-color: #2d2d2d;">
             <div class="container text-center">
                 <h2>Holiday & Seasonal Lighting Installation</h2>
-                <img src="assets/img/Xma_lighting.jpg" alt="Festive Home with Christmas Lights" class="img-fluid my-4 mx-auto">
+                <img src="assets/img/Xmas_lighting" alt="Festive Home with Christmas Lights" class="img-fluid my-4 mx-auto">
                 <p>Make your holidays magical and stress-free with professionally installed holiday lighting:</p>
                 <ul class="list-unstyled">
                     <li>Custom designs for a festive look.</li>
