--- a/Lighting.html
+++ b/Lighting.html
@@ -76,7 +76,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
    
     <!-- Hero Section -->
-    <div class="hero bg-light py-5 text-center" style="background-color: #2d2d2d;">  
+    <div class="hero py-5 text-center" style="background-color: #2d2d2d;">  
         <h1>Interior & Exterior Lighting Services</h1>
         <p>Brighten Your Home, Illuminate Your Outdoors</p>
     </div>
