--- a/Lighting.html
+++ b/Lighting.html
@@ -78,7 +78,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- Hero Section -->
     <div class="hero py-5 text-center" style="background-color: #2d2d2d;">  
         <h1>Interior & Exterior Lighting Services</h1>
-        <p style="font-size: 1.8rem; font-weight: bold;Brighten Your Home, Illuminate Your Outdoors</p>
+        <p> </p>Brighten Your Home, Illuminate Your Outdoors</p>
     </div>
 
     <!-- Main Content -->
