--- a/Lighting.html
+++ b/Lighting.html
@@ -89,13 +89,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <img src="assets/img/Living_Room_Lighting" alt="Living Room with Smart Lighting" class="img-fluid my-4 mx-auto">
                 <h2>Smart Interior Lighting Solutions</h2>
                 <p>Transform your home with cutting-edge lighting solutions:</p>
-                <ul class="list-unstyled">
-                    <li>Lights turn on/off automatically while you’re on vacation.</li>
-                    <li>Set schedules to match your routine.</li>
-                    <li>Sync lighting with music for immersive experiences.</li>
-                    <li>Adjust lighting to follow natural circadian rhythms for better wellness.</li>
-                    <li>Control lighting in every room with an app or voice command.</li>
-                </ul>
+                <ul class="list-unstyled" style="text-align: left; font-weight: bold; color: #ffffff; list-style-type: disc; margin-left: 2rem;">
+                <li>Lights turn on/off automatically while you’re on vacation.</li>
+                <li>Set schedules to match your routine.</li>
+                <li>Sync lighting with music for immersive experiences.</li>
+                <li>Adjust lighting to follow natural circadian rhythms for better wellness.</li>
+                <li>Control lighting in every room with an app or voice command.</li>
+            </ul>
             </div>
         </section>
 
