bullet list centred

--- a/Lighting.html
+++ b/Lighting.html
@@ -80,25 +80,24 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <h1>Interior & Exterior Lighting Services</h1>
         <p <p style="font-size: 2rem; font-weight: bold; Brighten Your Home, Illuminate Your Outdoors</p>
     </div>
-
-    <!-- Main Content -->
-    <main>
-        <!-- Smart Interior Lighting -->
-        <section class="py-5" style="background-color: #2d2d2d;">           
-            <div class="container text-center">
-                <img src="assets/img/Living_Room_Lighting" alt="Living Room with Smart Lighting" class="img-fluid my-4 mx-auto">
-                <h2>Smart Interior Lighting Solutions</h2>
-                <p>Transform your home with cutting-edge lighting solutions:</p>
-                <ul class="list-unstyled" style="text-align: left; font-weight: bold; color: #ffffff; list-style-type: disc; margin-left: 2rem;">
-                <li>Lights turn on/off automatically while you’re on vacation.</li>
-                <li>Set schedules to match your routine.</li>
-                <li>Sync lighting with music for immersive experiences.</li>
-                <li>Adjust lighting to follow natural circadian rhythms for better wellness.</li>
-                <li>Control lighting in every room with an app or voice command.</li>
+<!-- Main Content -->
+<main>
+    <!-- Smart Interior Lighting -->
+    <section class="py-5" style="background-color: #2d2d2d;">           
+        <div class="container text-center">
+            <img src="assets/img/Living_Room_Lighting" alt="Living Room with Smart Lighting" class="img-fluid my-4 mx-auto">
+            <h2>Smart Interior Lighting Solutions</h2>
+            <p>Transform your home with cutting-edge lighting solutions:</p>
+            <ul class="list-unstyled" style="font-weight: bold; color: #ffffff; list-style-type: disc; text-align: center; padding-left: 0;">
+                <li style="margin-bottom: 1rem;">Lights turn on/off automatically while you’re on vacation.</li>
+                <li style="margin-bottom: 1rem;">Set schedules to match your routine.</li>
+                <li style="margin-bottom: 1rem;">Sync lighting with music for immersive experiences.</li>
+                <li style="margin-bottom: 1rem;">Adjust lighting to follow natural circadian rhythms for better wellness.</li>
+                <li style="margin-bottom: 1rem;">Control lighting in every room with an app or voice command.</li>
             </ul>
-            </div>
-        </section>
-
+        </div>
+    </section>
+</main>
         <!-- Professional Interior Lighting Installations -->
         <section class="py-5 bg-light" style="background-color: #2d2d2d;">
             <div class="container text-center">
