--- a/Lighting.html
+++ b/Lighting.html
@@ -88,12 +88,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <img src="assets/img/Living_Room_Lighting" alt="Living Room with Smart Lighting" class="img-fluid my-4 mx-auto">
             <h2>Smart Interior Lighting Solutions</h2>
             <p>Transform your home with cutting-edge lighting solutions:</p>
-            <ul class="list-unstyled" style="font-weight: bold; color: #ffffff; list-style-type: disc; text-align: center; padding-left: 0;">
-                <li style="margin-bottom: 1rem;">Lights turn on/off automatically while you’re on vacation.</li>
-                <li style="margin-bottom: 1rem;">Set schedules to match your routine.</li>
-                <li style="margin-bottom: 1rem;">Sync lighting with music for immersive experiences.</li>
-                <li style="margin-bottom: 1rem;">Adjust lighting to follow natural circadian rhythms for better wellness.</li>
-                <li style="margin-bottom: 1rem;">Control lighting in every room with an app or voice command.</li>
+            <ul class="list-unstyled" style="text-align: left; font-weight: bold; color: #ffffff; list-style-type: disc; margin-left: 2rem;">
+                <li style="margin-bottom: 0.5rem;">Lights turn on/off automatically while you’re on vacation.</li>
+                <li style="margin-bottom: 0.5rem;">Set schedules to match your routine.</li>
+                <li style="margin-bottom: 0.5rem;">Sync lighting with music for immersive experiences.</li>
+                <li style="margin-bottom: 0.5rem;">Adjust lighting to follow natural circadian rhythms for better wellness.</li>
+                <li style="margin-bottom: 0.5rem;">Control lighting in every room with an app or voice command.</li>
             </ul>
         </div>
     </section>
