--- a/Lighting.html
+++ b/Lighting.html
@@ -99,7 +99,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </section>
 </main>
         <!-- Professional Interior Lighting Installations -->
-        <section class="py-5 bg-light" style="background-color: #2d2d2d;color: #ffcc00;">
+        <section class="py-5 bg-light" style="background-color: #2d2d2d;color: #000000;">
             <div class="container text-center">
                 <h2>Professional Interior Lighting Installations</h2>
                 <p>We specialize in five types of lighting installations:</p>
