<figcaption style="font-weight: bold; font-size: 1.2rem;">Track Lighting</figcaption>             </div>

--- a/Lighting.html
+++ b/Lighting.html
@@ -106,8 +106,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="row gy-4 mt-4">
                     <div class="col-md-4">
                         <img src="assets/img/kitchen_lighting" alt="Kitchen with Track Lighting" class="img-fluid mx-auto">
-                        <figcaption>Track Lighting</figcaption>
-                    </div>
+                     <figcaption style="font-weight: bold; font-size: 1.2rem;">Track Lighting</figcaption>
+            </div>
                     <div class="col-md-4">
                         <img src="assets/img/Living_Room_Lighting" alt="Living Room with Recessed Ceiling Lights" class="img-fluid mx-auto">
                         <figcaption>Recessed Ceiling Lights</figcaption>
