style="font-weight: bold; font-size: 1.2rem;">

--- a/Lighting.html
+++ b/Lighting.html
@@ -110,19 +110,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
                     <div class="col-md-4">
                         <img src="assets/img/Living_Room_Lighting" alt="Living Room with Recessed Ceiling Lights" class="img-fluid mx-auto">
-                        <figcaption>Recessed Ceiling Lights</figcaption>
+                        <figcaption style="font-weight: bold; font-size: 1.2rem;">Recessed Ceiling Lights</figcaption>
                     </div>
                     <div class="col-md-4">
                         <img src="assets/img/cozy_lighting" alt="Reading Nook with Downlights" class="img-fluid mx-auto">
-                        <figcaption>Downlights</figcaption>
+                        <figcaption style="font-weight: bold; font-size: 1.2rem;">Downlights</figcaption>
                     </div>
                     <div class="col-md-4">
                         <img src="assets/img/bedroom_lighting" alt="Bedroom with Swag Lighting" class="img-fluid mx-auto">
-                        <figcaption>Swag Lighting</figcaption>
+                        <figcaption style="font-weight: bold; font-size: 1.2rem;">Swag Lighting</figcaption>
                     </div>
                     <div class="col-md-4">
                         <img src="assets/img/Chandelier_light" alt="Dining Room with Chandelier" class="img-fluid mx-auto">
-                        <figcaption>Chandeliers ($269 Install)</figcaption>
+                        <figcaption style="font-weight: bold; font-size: 1.2rem;">Chandeliers ($269 Install)</figcaption>
                     </div>
                 </div>
             </div>
