--- a/Lighting.html
+++ b/Lighting.html
@@ -145,7 +145,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </section>
 
         <!-- Holiday Lighting -->
-        <section class="py-5 bg-light" style="background-color: #2d2d2d;">
+        <section class="py-5 bg" style="background-color: #2d2d2d; color: #000000;">
             <div class="container text-center">
                 <h2>Holiday & Seasonal Lighting Installation</h2>
                 <img src="assets/img/Xmas_lighting" alt="Festive Home with Christmas Lights" class="img-fluid my-4 mx-auto">
