"margin-bottom: 0.5rem;">

--- a/Lighting.html
+++ b/Lighting.html
@@ -134,8 +134,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <h2>Exterior Lighting Services</h2>
                 <img src="assets/img/Exterior_Lighting" alt="House Exterior with Lighting" class="img-fluid my-4 mx-auto">
                 <p>Enhance safety and beauty with professional exterior lighting:</p>
-                <ul class="list-unstyled">
-                    <li>Automated schedules to match seasons and time changes.</li>
+
+<ul class="list-unstyled" style="text-align: left; font-weight: bold; color: #ffffff; list-style-type: disc; margin-left: 2rem;">
+
+                    <li style="margin-bottom: 0.5rem;"> Automated schedules to match seasons and time changes.</li>
                     <li>Motion-activated floodlights for security (great for rural properties).</li>
                     <li>Pathway and driveway lighting for safe navigation.</li>
                     <li>Deck and patio lighting for evening gatherings.</li>
