#ffffff holiday background

--- a/Lighting.html
+++ b/Lighting.html
@@ -147,7 +147,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </section>
 
         <!-- Holiday Lighting -->
-        <section class="py-5" style="background-color: #2d2d2d; color: #000000;">
+        <section class="py-5" style="background-color: #ffffff; color: #000000;">
 
             
             <div class="container text-center">
