style="margin-bottom: 0.5rem;"

--- a/Lighting.html
+++ b/Lighting.html
@@ -138,10 +138,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <ul class="list-unstyled" style="text-align: left; font-weight: bold; color: #ffffff; list-style-type: disc; margin-left: 2rem;">
 
                     <li style="margin-bottom: 0.5rem;"> Automated schedules to match seasons and time changes.</li>
-                    <li>Motion-activated floodlights for security (great for rural properties).</li>
-                    <li>Pathway and driveway lighting for safe navigation.</li>
-                    <li>Deck and patio lighting for evening gatherings.</li>
-                    <li>Holiday lighting with smart automation.</li>
+                    <li style="margin-bottom: 0.5rem;"> Motion-activated floodlights for security (great for rural properties).</li>
+                    <li style="margin-bottom: 0.5rem;"> Pathway and driveway lighting for safe navigation.</li>
+                    <li style="margin-bottom: 0.5rem;"> Deck and patio lighting for evening gatherings.</li>
+                    <li style="margin-bottom: 0.5rem;"> Holiday lighting with smart automation.</li>
                 </ul>
             </div>
         </section>
