<!-- Holiday Lighting -->         <section class="py-5" style="background-color: #ffffff; color: #000000;">                         <div class="container text-center">                 <h2>Holiday & Seasonal Lighting Installation</h2>

--- a/Lighting.html
+++ b/Lighting.html
@@ -147,9 +147,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </section>
 
         <!-- Holiday Lighting -->
-        <section class="py-5" style="background-color: #ffffff; color: #000000;">
-
-            
+        <section class="py-5" style="background-color: #ffffff; color: #000000;font-weight: bold;">            
             <div class="container text-center">
                 <h2>Holiday & Seasonal Lighting Installation</h2>
                 <img src="assets/img/Xmas_lighting" alt="Festive Home with Christmas Lights" class="img-fluid my-4 mx-auto">
