style="margin-bottom: 1rem;">Energy

--- a/Lighting.html
+++ b/Lighting.html
@@ -151,11 +151,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="container text-center">
                 <h2>Holiday & Seasonal Lighting Installation</h2>
                 <img src="assets/img/Xmas_lighting" alt="Festive Home with Christmas Lights" class="img-fluid my-4 mx-auto">
-                <p>Make your holidays magical and stress-free with professionally installed holiday lighting:</p>
-                <ul class="list-unstyled">
-                    <li>Custom designs for a festive look.</li>
-                    <li>Smart automation to turn lights on/off with a button.</li>
-                    <li>Energy-efficient LEDs to save on energy costs.</li>
+                <p style="font-size: 1.5rem; font-weight: bold; margin-bottom: 1.5rem;"> 
+                    Make Your Holidays Magical and Stress-Free with Professionally Installed Holiday Lighting:</p>
+                <ul class="list-unstyled" style="font-size: 1.2rem; margin-top: 1rem;">
+                    <li style="margin-bottom: 1rem;">Custom Designs for a Festive look.</li>
+                    <li style="margin-bottom: 1rem;">Smart Automation to Easily Turn lights On/Off.</li>
+                    <li style="margin-bottom: 1rem;">Energy-Efficient LEDs to Save on Energy Costs.</li>
                 </ul>
             </div>
         </section>
