--- a/Lighting.html
+++ b/Lighting.html
@@ -166,7 +166,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="container text-center">
                 <h2>Why Choose Leonard Electric?</h2>
                 <p>Here’s why we’re the trusted choice for all your lighting needs:</p>
-                <ul class="list-unstyled">
+                <ul class="list-unstyled" margin-top: 1rem;">
                     <li><strong>Licensed Professionals:</strong> Over 15 years of trusted service.</li>
                     <li><strong>Customer-Focused:</strong> We tailor our services to your unique needs.</li>
                     <li><strong>Affordable Prices:</strong> Competitive rates for every budget.</li>
