why choose edita

--- a/Lighting.html
+++ b/Lighting.html
@@ -162,18 +162,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </section>
 
         <!-- Why Choose Leonard Electric -->
-        <section class="py-5">
-            <div class="container text-center">
-                <h2>Why Choose Leonard Electric?</h2>
-                <p>Here’s why we’re the trusted choice for all your lighting needs:</p>
-                <ul class="list-unstyled" margin-top: 1rem;">
-                    <li><strong>Licensed Professionals:</strong> Over 15 years of trusted service.</li>
-                    <li><strong>Customer-Focused:</strong> We tailor our services to your unique needs.</li>
-                    <li><strong>Affordable Prices:</strong> Competitive rates for every budget.</li>
-                    <li><strong>Guaranteed Satisfaction:</strong> Quality workmanship you can rely on.</li>
-                </ul>
-            </div>
-        </section>
+<section class="py-5">
+    <div class="container text-center">
+        <h2>Why Choose Leonard Electric?</h2>
+        <p>Here’s why we’re the trusted choice for all your lighting needs:</p>
+        <ul class="list-unstyled" style="margin-top: 1rem;">
+            <li style="margin-bottom: 1rem;">
+                <strong>Licensed Professionals:</strong> Over 15 years of trusted service.
+            </li>
+            <li style="margin-bottom: 1rem;">
+                <strong>Customer-Focused:</strong> We tailor our services to your unique needs.
+            </li>
+            <li style="margin-bottom: 1rem;">
+                <strong>Affordable Prices:</strong> Competitive rates for every budget.
+            </li>
+            <li style="margin-bottom: 1rem;">
+                <strong>Guaranteed Satisfaction:</strong> Quality workmanship you can rely on.
+            </li>
+        </ul>
+    </div>
+</section>
     </main>
 
                       </div>
