--- a/hottubs.html
+++ b/hottubs.html
@@ -215,7 +215,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">Services</h3>
                     <ul class="list-unstyled">
-                        <li><a href="panelupgrade.html">Panel Upgrades</a><a href="services.html" style="margin-left: 13px;">&nbsp;Surge Protection</a></li>
+                        <li><a href="panelupgrade.html">Panel Upgrades</a><a href="surgeprotector.html" style="margin-left: 13px;">&nbsp;Surge Protection</a></li>
                         <li><a href="electricalrepairs.html">Electrical Repair &amp; Installation</a></li>
                         <li><a href="homeautomation.html">Home Automation Systems</a></li>
                         <li><a href="ev.html">Car Charger</a><a href="ev.html" style="padding-left: 0px;margin-left: 15px;">EV's</a></li>
