--- a/homeautomation.html
+++ b/homeautomation.html
@@ -71,6 +71,75 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
         </div>
     </nav>
+ <!-- Main Content -->
+    <div class="container py-5">
+        <!-- Introduction Section -->
+        <div class="row align-items-center mb-5">
+            <div class="col-md-6">
+                <img class="img-fluid rounded" src="assets/img/AdobeStock_555108297.jpeg" alt="Smart Home">
+            </div>
+            <div class="col-md-6">
+                <h2 class="fw-bold text-uppercase">Transform Your Home</h2>
+                <p class="text-muted">Experience a state-of-the-art smart sanctuary where convenience, comfort, and security come together. Control your lighting, appliances, and security systems effortlessly with our expert automation services.</p>
+            </div>
+        </div>
+
+        <!-- Features Section -->
+        <div class="row text-center mb-5">
+            <h2 class="fw-bold mb-4">Our Home Automation Features</h2>
+            <div class="col-md-4">
+                <div class="p-3 border rounded">
+                    <h3 class="fw-bold">Smart Lighting</h3>
+                    <p class="text-muted">Control your lights from anywhere or set schedules for energy efficiency.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="p-3 border rounded">
+                    <h3 class="fw-bold">Temperature Control</h3>
+                    <p class="text-muted">Set the ideal home temperature with ease using smart thermostats.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="p-3 border rounded">
+                    <h3 class="fw-bold">Security Systems</h3>
+                    <p class="text-muted">Monitor your home and ensure safety with advanced smart security solutions.</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Call to Action Section -->
+        <div class="text-center py-5 bg-light rounded">
+            <h2 class="fw-bold">Start Your Smart Home Journey Today</h2>
+            <p class="text-muted">Get in touch with us to customize your smart home system.</p>
+            <a href="contacts.html" class="btn btn-primary btn-lg">Contact Us</a>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
     <div class="bg-light border rounded border-light hero-photography jumbotron py-5 px-4" style="background: url(&quot;assets/img/AdobeStock_328780060.jpeg&quot;) center / cover;height: 317.594px;">
         <h3 class="fw-bold" style="font-family: Inter, sans-serif;font-size: 48px;color: var(--bs-body-color);background: rgba(45,44,56,0.71);">Home Automation Sytems</h3>
         <p></p>
