--- a/homeautomation.html
+++ b/homeautomation.html
@@ -115,9 +115,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
 
         <!-- Call to Action Section -->
-        <div class="text-center py-5 bg-light rounded">
+        <div class="text-center py-5 bg-light rounded" style="background-color: #dbe7f0; color: #ffffff;">
             <h2 class="fw-bold">Start Your Smart Home Journey Today</h2>
-            <p class="text-muted">Get in touch with us to customize your smart home system.</p>
+            <p> Get in touch with us to customize your smart home system.</p>
             <a href="contacts.html" class="btn btn-primary btn-lg">Contact Us</a>
         </div>
     </div>
